Update title to 'EMBED MAP' and fix formatting

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MAP</title>
+    <title>EMBED MAP</title>
 </head>
 <body>
     <h1>Wekcome to Tap Acadamy Offical Website</h1>
@@ -18,3 +18,4 @@
     <iframe width="560" height="315" src="https://www.youtube.com/embed/uZ_Kd9oKl34?si=orVVj8ElgOrppGM2" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 </body>
 </html>
+
